@@ -2,6 +2,7 @@ package com.like.system.address.adapter.in.web;
 
 import java.io.BufferedReader;
 import java.io.InputStreamReader;
+import java.net.URI;
 import java.net.URL;
 import java.net.URLEncoder;
 
@@ -43,7 +44,7 @@ public class RoadAddressController {
 							 							
 		return client.get()				     
 				  	 .uri(uriBuilder -> uriBuilder
-				  			.queryParam("confmKey", property.getConfmKey())
+				  			.queryParam("confmKey", property.confmKey())
 				  			.queryParam("keyword", dto.keyword())
 				  			.queryParam("currentPage", dto.currentPage())
 				  			.queryParam("countPerPage", dto.countPerPage())				  							  			
@@ -64,14 +65,15 @@ public class RoadAddressController {
 		String currentPage = searchVO.currentPage().toString(); 	// req.getParameter("currentPage");
 		String countPerPage = "10"; // req.getParameter("countPerPage");
 		String resultType = "json";	// req.getParameter("resultType");
-		String confmKey = property.getConfmKey(); // "devU01TX0FVVEgyMDIyMDYwNzIyMjI1MzExMjY1ODY=";		// req.getParameter("confmKey");
+		String confmKey = property.confmKey(); // "devU01TX0FVVEgyMDIyMDYwNzIyMjI1MzExMjY1ODY=";		// req.getParameter("confmKey");
 		String keyword = searchVO.keyword();		// req.getParameter("keyword");
 		
-		String apiUrl = property.getApiUrl()+"?currentPage="+currentPage
+		String apiUrl = property.apiUrl()+"?currentPage="+currentPage
 		  			  + "&countPerPage="+countPerPage+"&keyword="+URLEncoder.encode(keyword,"UTF-8")
 					  + "&confmKey="+confmKey+"&resultType="+resultType;		
 		
-	   	URL url = new URL(apiUrl);
+	   	//URL url = new URL(apiUrl);
+		URL url = URI.create(apiUrl).toURL();
 	   	BufferedReader br = new BufferedReader(new InputStreamReader(url.openStream(),"UTF-8"));
 	   	StringBuffer sb = new StringBuffer();
 	   	String tempStr = null;
@@ -90,7 +92,7 @@ public class RoadAddressController {
 
 	private WebClient createWebClient() {
 		return WebClient.builder()
-						.baseUrl(property.getApiUrl())								
+						.baseUrl(property.apiUrl())								
 						.defaultHeader(HttpHeaders.CONTENT_TYPE, MediaType.APPLICATION_JSON_VALUE)
 						.defaultHeader(HttpHeaders.ACCESS_CONTROL_ALLOW_ORIGIN, "http://localhost:4200")
 						.build();
